feat: quest update vector db 반영